--- a/MvcMovie/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MvcMovie/Areas/Identity/Pages/Account/Register.cshtml
@@ -6,29 +6,66 @@
 
 <h1>@ViewData["Title"]</h1>
 
+<script>
+    function validateForm() {
+
+        var fileInput = document.querySelector('input[type="file"]');
+        if (!fileInput.files[0]) {
+            alert('Please select an image file.');
+            return false;
+        }
+        return true;
+    }
+</script>
 <div class="row">
-    <div class="col-md-4">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
-            <hr />
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                <label asp-for="Input.Email"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="form-floating">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.Password"></label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-floating">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.ConfirmPassword"></label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
-        </form>
+    <div class="col-md-6">
+        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post" onsubmit="return validateForm()" >
+
+                <h2>Create a new account.</h2>
+                <hr />
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+                <div class="myform col-12 py-2">
+                    <input asp-for="Input.Email" class="input" aria-required="true" placeholder="Email" />
+                    <span asp-validation-for="Input.Email" class="input-border"></span>
+                </div>
+                <div class="myform col-12 py-2">
+                    <input asp-for="Input.Password" class="input" aria-required="true" placeholder="Password" />
+                    <span @*asp-validation-for="Input.Password"*@ class="input-border"></span>
+                </div>
+                <div class="myform col-6 py-2">
+                    <input asp-for="Input.ConfirmPassword" class="input" aria-required="true" placeholder="Confirm Password" />
+                    <span @*asp-validation-for="Input.ConfirmPassword"*@ class="input-border"></span>
+                </div>
+
+                <div class="myform col-6 py-2">
+                    <input asp-for="Input.FirstName" class="input" aria-required="true" placeholder="FirstName" />
+                    <span asp-validation-for="Input.FirstName" class="input-border"></span>
+                </div>
+
+                <div class="myform col-6 py-2">
+                    <input asp-for="Input.LastName" class="input" aria-required="true" placeholder="LastName" />
+                    <span asp-validation-for="Input.LastName" class="input-border"></span>
+                </div>
+
+                <div class="myform col-6 py-2">
+                    <input asp-for="Input.City" class="input" aria-required="true" placeholder="City" />
+                    <span asp-validation-for="Input.City" class="input-border"></span>
+                </div>
+
+                <div class="myform col-12 py-2">
+                    <input asp-for="Input.PhoneNumber" class="input" aria-required="true" placeholder="Phone #" />
+                    <span asp-validation-for="Input.PhoneNumber" class="input-border"></span>
+                </div>
+                <div class="myform col-12 py-2">
+                <input asp-for="Input.ImageData" class="form-control" type="file" id="ImageData" />
+                    <span @*asp-validation-for="Input.ImageData"*@ class="input-border"></span>
+                </div>
+
+                <button id="registerSubmit" type="submit" class="w-50 btn btn-lg btn-primary">Register</button>
+                <hr />
+
+            </form>
     </div>
     <div class="col-md-6 col-md-offset-2">
         <section>
