adding User Roles

--- a/MvcMovie/Areas/Admin/Views/User/Create.cshtml
+++ b/MvcMovie/Areas/Admin/Views/User/Create.cshtml
@@ -64,7 +64,9 @@
 					<br />
 
 					<div class="myform">
-						<button class="btn btn-outline-primary" type="submit">Create User</button>
+						<center>
+							<button type="submit">Create User</button>
+						</center>
 					</div>
 
 
