--- a/MvcMovie/Views/Shared/_Layout.cshtml
+++ b/MvcMovie/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" class="nav-link text-dark" asp-area="User" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link active" aria-current="page" class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" class="nav-link text-dark" asp-area="Admin" asp-controller="User" asp-action="Index">Users</a>
